Java 21およびGradleビルドシステムへ移行
- Java 21の最新APIに対応
- Gradleビルド設定を追加 (build.gradle)
- 依存ライブラリを最新版に更新:
  - commons-cli 1.6.0
  - commons-collections4 4.4
  - commons-compress 1.26.0
  - commons-lang3 3.14.0
  - jsoup 1.17.2
  - junrar 7.5.5
  - velocity-engine-core 2.3
  - batik-transcoder 1.17 (JAIから置き換え)
  - slf4j 2.0.9
- 非推奨APIの修正
- 一貫したビルドのためGradle Wrapperを追加
- 新規テストケースを追加
- READMEにJava 21とGradleの説明を追加